# simple_github_search

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yaml
presentation/: 1-containers.md  2-ACR.md  3-AAS.md  4-actions.md
src/: app.py  git_search.py
src/templates/: home.html  results.html
